--- a/client/style.css
+++ b/client/style.css
@@ -1,29 +1,53 @@
+h1, h2, h3, h4, h5 {
+  margin: 0px;
+  padding: 0px;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+}
+
 .game {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 .combat {
   display: flex;
   flex-direction: column;
-  background-color: blue;
+  background-color: rgb(173, 231, 249);
+}
+
+.fightButton {
+  height: 30px;
+  width: 70px;
+  font-weight: 700;
+  background-color: red;
+  border: 0px;
+  border-radius: 5px;
+  margin: 5px 0px;
 }
 
 .factions {
-  display: flex;
-  flex-direction: column;
-  background-color: red;
+  background-color: rgb(244, 222, 190);
 }
 
 .faction {
-  background-color: gray;
+  background-color: rgb(0, 0, 0);
+  color: white;
+}
+
+.units {
   display: flex;
   flex-direction: row;
-  width: 50vw;
+  color: black;
 }
 
 .unit {
-  height: 100px;
-  width: 100px;
-  background-color: violet;
+  width: 200px;
+  background-color: rgb(217, 174, 242);
 }
