--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Texturina:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;0,800;1,100;1,300;1,400;1,600;1,700;1,800&display=swap');
+
 h1, h2, h3, h4, h5 {
   margin: 0px;
   padding: 0px;
@@ -7,6 +9,7 @@ html {
   background-image: url('images/pexels-adrien-olichon-2931270.jpg');
   color: white;
   font-size: 1em;
+  font-family: 'Texturina', serif;
 }
 
 .header {
