--- a/client/style.css
+++ b/client/style.css
@@ -44,8 +44,6 @@ body {
 */
 
 .combatButton button {
-  width: 150px;
-  height: 30px;
   font-weight: 600;
   font-size: 1em;
   border-radius: 3px;
@@ -54,6 +52,10 @@ body {
 
 .combatButton button:active {
   background-color: rgb(63, 184, 63);
+}
+
+.combatButton .cancelButton {
+  width: 80px;
 }
 
 .combatButton .confirmDefender:active {
