--- a/client/style.css
+++ b/client/style.css
@@ -87,11 +87,12 @@ body {
 
 .squareRow {
   display: flex;
+  color: white;
 }
 
 .squareCell {
-  height: 40px;
-  width: 40px;
+  height: 80px;
+  width: 80px;
   border: 1px solid white;
   border-bottom: none;
   margin: 0px;
