Show coords on hover; simplify cell divs

--- a/client/style.css
+++ b/client/style.css
@@ -4,6 +4,12 @@ General
 
 @import url('https://fonts.googleapis.com/css2?family=Texturina:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;0,800;1,100;1,300;1,400;1,600;1,700;1,800&display=swap');
 
+:root {
+  --empire-color: rgb(26, 97, 4);
+  --protectors-color: rgb(28, 68, 121);
+  --guardians-color: rgb(119, 47, 29);
+}
+
 h1, h2, h3, h4, h5 {
   margin: 0px;
   padding: 0px;
@@ -99,6 +105,8 @@ body {
 }
 
 .squareCell {
+  display: flex;
+  flex-direction: column;
   height: 100px;
   width: 110px;
   border: 1px solid white;
@@ -107,9 +115,14 @@ body {
   padding: 0px;
 }
 
-.cellContents {
-  display: flex;
-  flex-direction: column;
+.coordinates {
+  color: rgb(224, 224, 224);
+}
+.squareCell .coordinates {
+  visibility: hidden;
+}
+.squareCell:hover .coordinates {
+  visibility: visible;
 }
 
 .cellHeader {
@@ -123,21 +136,24 @@ body {
 }
 
 .squareRow .Guardians {
-  color: rgb(119, 47, 29);
+  color: var(--guardians-color);
 }
 .squareRow .Protectors {
-  color: rgb(28, 68, 121);
+  color: var(--protectors-color);
 }
 .squareRow .Empire {
-  color: rgb(20, 80, 2);
+  color: var(--empire-color);
 }
 
 .squareCell:hover {
-  background-color: gray;
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .isValidMove {
   background-color: rgba(0, 255, 55, 0.445);
+}
+.isValidMove:hover {
+  background-color: rgba(0, 255, 55, 0.645);
 }
 
 .cellButtons {
@@ -219,13 +235,13 @@ body {
 }
 
 .empire {
-  background-color: rgb(20, 80, 2);
+  background-color: var(--empire-color);
 }
 .protectors {
-  background-color: rgb(2, 45, 102);
+  background-color: var(--protectors-color);
 }
 .guardians {
-  background-color: rgb(104, 21, 0);
+  background-color: var(--guardians-color);
 }
 
 /*
